# Sekrol

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  index.html
client/src/: lib.rs  main.rs
client/src/app/: beranda.rs  create.rs  mod.rs
client/src/components/: icons.rs
server/: Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs  uploads.rs
server/src/models/: mod.rs  struktur.rs
