[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = { version = "0.11.0", features = ["gloo-net"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
wasm-bindgen-futures = "0.4.51"
web-sys = { version = "0.3.78", features = [
  "HtmlVideoElement",
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "Touch",
  "TouchList"
]}
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
